Added filtering logic to speed up computation :

--- a/Building a Simple Recommendation System in FSharp.ipynb
+++ b/Building a Simple Recommendation System in FSharp.ipynb
@@ -314,19 +314,21 @@
     "4. Production Company\n",
     "5. Popularity\n",
     "\n",
-    "And therefore, we'd like to model the domain accordingly. We introduce a word soup and a soup list, which comprise of a concatenation of all the sanitized tokens and list of tokens of fields 1 through 4, respectively. We will extract the popularity of a movie as well. "
+    "And therefore, we'd like to model the domain accordingly. We introduce a word soup and a soup list, which comprise of a concatenation of all the sanitized tokens and list of tokens of fields 1 through 4, respectively. We will extract the popularity of a movie as well and some other lists that can help us better filter."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "type MovieData = { title      : string; \n",
-    "                   soup       : string;\n",
-    "                   soupList   : string list;\n",
-    "                   popularity : double; }"
+    "type MovieData = { title           : string; \n",
+    "                   soup            : string;\n",
+    "                   soupList        : string list;\n",
+    "                   genreList       : string list;\n",
+    "                   prodCompanyList : string list;\n",
+    "                   popularity      : double; }"
    ]
   },
   {
@@ -498,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,10 +535,12 @@
     "        let popularity = double(row.GetColumn \"popularity\")\n",
     "        \n",
     "        // Construct data type\n",
-    "        let movieData = { title      = title; \n",
-    "                          soup       = soup;\n",
-    "                          popularity = popularity;\n",
-    "                          soupList   = soupList }\n",
+    "        let movieData = { title           = title; \n",
+    "                          soup            = soup;\n",
+    "                          popularity      = popularity;\n",
+    "                          genreList       = genres;\n",
+    "                          prodCompanyList = productionCompany;\n",
+    "                          soupList        = soupList }\n",
     "    \n",
     "        // Append the output\n",
     "        output <- output @ [movieData]\n",
@@ -553,16 +557,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table><thead><tr><th><i>index</i></th><th>Key</th><th>Value</th></tr></thead><tbody><tr><td>0</td><td>Avatar</td><td>{ FSI_0013+MovieData: title: Avatar, soup: action adventure fantasy sciencefiction 3d alien alienplanet antiwar battle cgi cultureclash future futuristic loveaffair marine mindandsoul powerrelations romance society soldier space spacecolony spacetravel spacewar tribe 22nd alien becomes century civilization dispatched following marine mission moon orders pandora paraplegic protecting torn unique duneentertainment ingeniousfilmpartners lightstormentertainment twentiethcenturyfoxfilmcorporation, soupList: [ action, adventure, fantasy, sciencefiction, 3d, alien, alienplanet, antiwar, battle, cgi ... (35 more) ], popularity: 150.437577 }</td></tr><tr><td>1</td><td>Pirates of the Caribbean: At World&#39;s End</td><td>{ FSI_0013+MovieData: title: Pirates of the Caribbean: At World&#39;s End, soup: action adventure fantasy aftercreditsstinger afterlife alliance calypso drugabuse eastindiatradingcompany exoticisland fighter loveofoneslife ocean pirate ship shipwreck strongwoman swashbuckler traitor back barbossa believed captain come dead earth edge elizabeth headed life long nothing quite seems swann turner jerrybruckheimerfilms secondmateproductions waltdisneypictures, soupList: [ action, adventure, fantasy, aftercreditsstinger, afterlife, alliance, calypso, drugabuse, eastindiatradingcompany, exoticisland ... (29 more) ], popularity: 139.082615 }</td></tr><tr><td>2</td><td>Spectre</td><td>{ FSI_0013+MovieData: title: Spectre, soup: action adventure crime basedonnovel britishsecretservice mi6 secretagent sequel spy unitedkingdom alive back battles behind bond bonds cryptic deceit forces keep layers m message organization past peels political reveal secret sends service sinister spectre terrible trail truth uncover b24 columbiapictures danjaq, soupList: [ action, adventure, crime, basedonnovel, britishsecretservice, mi6, secretagent, sequel, spy, unitedkingdom ... (30 more) ], popularity: 107.376788 }</td></tr><tr><td>3</td><td>The Dark Knight Rises</td><td>{ FSI_0013+MovieData: title: The Dark Knight Rises, soup: action crime drama thriller batman burglar catburglar catwoman coverup crimefighter criminalunderworld dccomics destruction flood gothamcity hostagedrama imax secretidentity superhero terrorism terrorist timebomb tragichero vigilante villainess assumes attorney attorneys bane batman batman branded city city crimes dark death dent dents department district eight encounters enemy finest following gotham gothams harvey hunted knight kyle late later leader mysterious new overwhelms police protect protect reputation responsibility resurfaces selina subsequently terrorist villainous years dcentertainment legendarypictures syncopy warnerbros, soupList: [ action, crime, drama, thriller, batman, burglar, catburglar, catwoman, coverup, crimefighter ... (63 more) ], popularity: 112.31295 }</td></tr><tr><td>4</td><td>John Carter</td><td>{ FSI_0013+MovieData: title: John Carter, soup: action adventure sciencefiction 19thcentury 3d alien alienrace basedonnovel edgarriceburroughs escape mars marscivilization martian medallion princess spacetravel steampunk superhumanstrength swordandplanet (mars) barsoom barsoom becomes brink captain carter carter collapse conflict embroiled epic exotic former hands humanity inexplicably its john military mysterious people planet realizes rediscovers reluctantly rests survival transported warweary whos world waltdisneypictures, soupList: [ action, adventure, sciencefiction, 19thcentury, 3d, alien, alienrace, basedonnovel, edgarriceburroughs, escape ... (42 more) ], popularity: 43.926995 }</td></tr></tbody></table>"
+       "<table><thead><tr><th><i>index</i></th><th>Key</th><th>Value</th></tr></thead><tbody><tr><td>0</td><td>Avatar</td><td>{ FSI_0027+MovieData: title: Avatar, soup: action adventure fantasy sciencefiction 3d alien alienplanet antiwar battle cgi cultureclash future futuristic loveaffair marine mindandsoul powerrelations romance society soldier space spacecolony spacetravel spacewar tribe 22nd alien becomes century civilization dispatched following marine mission moon orders pandora paraplegic protecting torn unique duneentertainment ingeniousfilmpartners lightstormentertainment twentiethcenturyfoxfilmcorporation, soupList: [ action, adventure, fantasy, sciencefiction, 3d, alien, alienplanet, antiwar, battle, cgi ... (35 more) ], genreList: [ action, adventure, fantasy, sciencefiction ], prodCompanyList: [ duneentertainment, ingeniousfilmpartners, lightstormentertainment, twentiethcenturyfoxfilmcorporation ], popularity: 150.437577 }</td></tr><tr><td>1</td><td>Pirates of the Caribbean: At World&#39;s End</td><td>{ FSI_0027+MovieData: title: Pirates of the Caribbean: At World&#39;s End, soup: action adventure fantasy aftercreditsstinger afterlife alliance calypso drugabuse eastindiatradingcompany exoticisland fighter loveofoneslife ocean pirate ship shipwreck strongwoman swashbuckler traitor back barbossa believed captain come dead earth edge elizabeth headed life long nothing quite seems swann turner jerrybruckheimerfilms secondmateproductions waltdisneypictures, soupList: [ action, adventure, fantasy, aftercreditsstinger, afterlife, alliance, calypso, drugabuse, eastindiatradingcompany, exoticisland ... (29 more) ], genreList: [ action, adventure, fantasy ], prodCompanyList: [ jerrybruckheimerfilms, secondmateproductions, waltdisneypictures ], popularity: 139.082615 }</td></tr><tr><td>2</td><td>Spectre</td><td>{ FSI_0027+MovieData: title: Spectre, soup: action adventure crime basedonnovel britishsecretservice mi6 secretagent sequel spy unitedkingdom alive back battles behind bond bonds cryptic deceit forces keep layers m message organization past peels political reveal secret sends service sinister spectre terrible trail truth uncover b24 columbiapictures danjaq, soupList: [ action, adventure, crime, basedonnovel, britishsecretservice, mi6, secretagent, sequel, spy, unitedkingdom ... (30 more) ], genreList: [ action, adventure, crime ], prodCompanyList: [ b24, columbiapictures, danjaq ], popularity: 107.376788 }</td></tr><tr><td>3</td><td>The Dark Knight Rises</td><td>{ FSI_0027+MovieData: title: The Dark Knight Rises, soup: action crime drama thriller batman burglar catburglar catwoman coverup crimefighter criminalunderworld dccomics destruction flood gothamcity hostagedrama imax secretidentity superhero terrorism terrorist timebomb tragichero vigilante villainess assumes attorney attorneys bane batman batman branded city city crimes dark death dent dents department district eight encounters enemy finest following gotham gothams harvey hunted knight kyle late later leader mysterious new overwhelms police protect protect reputation responsibility resurfaces selina subsequently terrorist villainous years dcentertainment legendarypictures syncopy warnerbros, soupList: [ action, crime, drama, thriller, batman, burglar, catburglar, catwoman, coverup, crimefighter ... (63 more) ], genreList: [ action, crime, drama, thriller ], prodCompanyList: [ dcentertainment, legendarypictures, syncopy, warnerbros ], popularity: 112.31295 }</td></tr><tr><td>4</td><td>John Carter</td><td>{ FSI_0027+MovieData: title: John Carter, soup: action adventure sciencefiction 19thcentury 3d alien alienrace basedonnovel edgarriceburroughs escape mars marscivilization martian medallion princess spacetravel steampunk superhumanstrength swordandplanet (mars) barsoom barsoom becomes brink captain carter carter collapse conflict embroiled epic exotic former hands humanity inexplicably its john military mysterious people planet realizes rediscovers reluctantly rests survival transported warweary whos world waltdisneypictures, soupList: [ action, adventure, sciencefiction, 19thcentury, 3d, alien, alienrace, basedonnovel, edgarriceburroughs, escape ... (42 more) ], genreList: [ action, adventure, sciencefiction ], prodCompanyList: [ waltdisneypictures ], popularity: 43.926995 }</td></tr></tbody></table>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,18 +826,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "let recommendMovies (movie : string) (recommendationCount : int) =\n",
+    "  \n",
+    "    // Check if two lists contain any intersection - will be using this function to \n",
+    "    let setIntersect listA listB =\n",
+    "        Set.intersect (Set.ofList listA) (Set.ofList listB)\n",
+    "        |> Set.isEmpty\n",
+    "        |> not\n",
+    "            \n",
+    "    let filterOutMoviesNotRelated (movie1 : MovieData) (movie2 : MovieData) = \n",
+    "\n",
+    "        // Filtering mechanism: If the movies don't have any genres in common, don't even consider.\n",
+    "        let checkIfGenresExist (movie1 : MovieData) (movie2 : MovieData) = \n",
+    "            let movie1Genres = movie1.genreList\n",
+    "            let movie2Genres = movie2.genreList\n",
+    "            setIntersect movie1Genres movie2Genres\n",
+    "            \n",
+    "        // Filtering mechanism: If the movies don't have any production companies in common, don't even consider.\n",
+    "        let checkIfProductionCompaniesExist (movie1 : MovieData) (movie2 : MovieData) = \n",
+    "            let movie1ProdCompany = movie1.prodCompanyList\n",
+    "            let movie2ProdCompany = movie2.prodCompanyList\n",
+    "            setIntersect movie1ProdCompany movie2ProdCompany\n",
+    "    \n",
+    "        (checkIfGenresExist movie1 movie2) && (checkIfProductionCompaniesExist movie1 movie2)\n",
+    "    \n",
     "    if getDictOfData.ContainsKey movie then\n",
     "        let movieData = getDictOfData.[movie]\n",
     "        getDictOfData\n",
-    "         // Don't include the current item in question.\n",
-    "        |> Seq.filter(fun x -> not(x.Value = movieData))\n",
+    "         // Don't include the current item in question nor any other movie not of any of the genres of the movie\n",
+    "        |> Seq.filter(fun x -> not(x.Value = movieData) && ( filterOutMoviesNotRelated movieData x.Value ))\n",
     "        // Grab a tuple of the title and cosine distance\n",
-    "        |> Seq.map(fun x -> (x.Value.title, computeCosineDistance movie x.Value.title )) \n",
+    "        |> Seq.map(fun x -> (x.Value.title, computeCosineDistance movie x.Value.title)) \n",
     "        // Remove NaNs\n",
     "        |> Seq.filter(fun x -> not(System.Double.IsNaN(snd x)))\n",
     "        // Sort by distance\n",
